Bug 391806 - Sieve doesn't error on bad managesieve host
Summary: Sieve doesn't error on bad managesieve host
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: sieve (other bugs)
Version First Reported In: 5.6.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-13 10:37 UTC by Leandro Lucarella
Modified: 2018-10-26 17:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leandro Lucarella 2018-03-13 10:37:12 UTC
If the configured managesieve host doesn't exist, there is no error reported to the user. When going to Settings -> Manage Sieve Scripts, the progress circle will just go on and on without reporting any errors. A simple typo in the host name is very hard to pin point because of this!
Comment 1 Laurent Montel 2018-10-26 17:47:05 UTC
Git commit f3750c52aff3bd7f4c26e272488d60c4450c8230 by Laurent Montel.
Committed on 26/10/2018 at 17:46.
Pushed by mlaurent into branch 'master'.

Fix Bug 391806 - Sieve doesn't error on bad managesieve host

FIXED-IN: 5.10.0

M  +2    -1    src/kmanagesieve/session.cpp

https://commits.kde.org/libksieve/f3750c52aff3bd7f4c26e272488d60c4450c8230