Fix Bug 391806 - Sieve doesn't error on bad managesieve host

FIXED-IN: 5.10.0
BUG: 391806